Family frontend UI and change password API
